--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
-<script type="module" src="/_assets/index.a6c752ab.js"></script>
-<link rel="stylesheet" href="/_assets/style.d2ea3a18.css">
+<script type="module" src="/todo_mvc_vue3_view/_assets/index.a6c752ab.js"></script>
+<link rel="stylesheet" href="/todo_mvc_vue3_view/_assets/style.d2ea3a18.css">
 </head>
 <body>
   <div id="app"></div>
